Bug 333703 Non-ascii directory name is garbled in directory index. patch by Masatoshi Kimura (:emk) <VYV03354@nifty.ne.jp> r=jshin, sr=darin